OpenTTY Java Edition 1.16.1
Copyright (C) 2025 - Mr. Lima

[ _Commands_ ]

- `file [filename]`: prints information about file
- 
- 

[ _Updates_ ]

- Directories tree modified
- Initalize script changed to `.initrc`
- Fixed `pushd` invalid directories stacking
- Fixed **Lua** security error that allow access to process **owner** field
- **Lua** functions `io.read` and `io.write` now needs to use `/dev/stdin` and `/dev/stdout`
- Removed default parsers commands `vnt`
- Removed simbolic link file `/bin/java`
- Default title for command `view` now is same of Main Window
- **Lua** added function `os.getcwd()` to read current working directory
- MIDlet initial message from file `/etc/motd`
- Improved **File Explorer**
- Merged build tools **Lua**, **Shell Script** and **Packages**, utility `.` consider _shebangs_ to build.
- **Lua** Graphics API - _BuildScreen_ now can build Images from all sources
- Process viewer added new button **Refresh**
- Command `cp` now using raw _byte-array_
- Command `bind` need to read port from argument line, no default port in environment key anymore.
- Source code splited into `OpenTTY.java` (Main Class), `Lua.java` (Lua Runtime) and `MIDletCanvas.java` (Canvas Builder)
- **Font Generator** improved
- **JBenchmark** updated for _1.3_ (Migrated to Lua)

[ _Notes_ ]

- Files writed in **/tmp/** will be deleted when MIDlet closes.
- 