@@ -153,3 +153,4 @@
 [2025-1.17-02x83] Command 'CP' fixed - Using raw byte reader
 [2025-1.17-02x84] Command 'BIND' needs read port from argument line
 [2025-1.17-02x85] Improved Font Generator
+[2025-1.17-02x86] Improved Command 'case'
